<resources>
    <string name="app_name">MyCalculator</string>
    <string name="calc_name">0</string>
    <string name="divide">/</string>
    <string name="seven">7</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="plus">+</string>
    <string name="multiply">*</string>
    <string name="_0">0</string>
    <string name="clr">CLR</string>
    <string name="minus">-</string>
    <string name="Equal">=</string>
    <string name="dot">.</string>

</resources>